tests/negative/typecheck/addrof-type.orng
fn main() -> Int {
    let const X: Type = &4
    0
}